# server

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
firebasewrapper/: index.js  package.json
include/: APICredential.h  AddVideoRequest.h  Github.h  Router.h  ThreadPool.h  YoutubeService.h  helper.h
include/controllers/: BaseController.h  ChannelController.h  HelloWorldController.h  LoginController.h  SongController.h  VideoController.h
include/header/: AccessControlAllowHeaders.h  AccessControlAllowMethods.h  AccessControlAllowOrigin.h  AccessControlMaxAge.h  XGithubAuth.h  XLiveTubeAuth.h
include/jwt/: Certificate.h  Certificates.h  CertificatesStore.h  Token.h  TokenVerifier.h
include/middleware/: CorsMiddleware.h
include/requests/: AddVideoRequest.h  BaseRequest.h  ChangeActiveVideosRequest.h  ChangePlayerStateRequest.h  DeleteVideoRequest.h  UpdateChannelRequest.h
include/services/: GithubService.h  SocketIOService.h  VideoService.h  YoutubeService.h
opt/: CMakeLists.txt
src/: APICredential.cpp  AddVideoRequest.cpp  CMakeLists.txt  Github.cpp  Router.cpp  YoutubeService.cpp  helper.cpp  main.cpp
src/controllers/: BaseController.cpp  ChannelController.cpp  LoginController.cpp  SongController.cpp  VideoController.cpp
src/jwt/: Certificate.cpp  Certificates.cpp  CertificatesStore.cpp  Token.cpp  TokenVerifier.cpp
src/middleware/: CorsMiddleware.cpp
src/requests/: AddVideoRequest.cpp  BaseRequest.cpp  ChangeActiveVideosRequest.cpp  ChangePlayerStateRequest.cpp  DeleteVideoRequest.cpp  UpdateChannelRequest.cpp
src/services/: GithubService.cpp  SocketIOService.cpp  VideoService.cpp  YoutubeService.cpp
